Operating Line Color

--- a/src/Distillation Demo Pawa.ipynb
+++ b/src/Distillation Demo Pawa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0455f89e0391492fa9eca9002c359b31",
+       "model_id": "f78d8dc484b1441589e257d4131eb832",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,8 +60,8 @@
     "# Define the sliders:\n",
     "xD_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "R_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=3, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
-    "VB_slider = widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=3, step=0.001,  description='Boilup Ratio:', readout_format='.1f')\n",
+    "R_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "VB_slider = widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Boilup Ratio:', readout_format='.1f')\n",
     "\n",
     "def plot_distil_binary(xD=xD_slider.value, xB=xB_slider.value, R=R_slider.value, VB=VB_slider.value):\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R, boil_up = VB, total_stages = 10, feed_stage = 5)\n",
@@ -91,7 +91,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
