--- a/src/Distillation Demo Pawa.ipynb
+++ b/src/Distillation Demo Pawa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f78d8dc484b1441589e257d4131eb832",
+       "model_id": "01c4b3124cbf426eb6cfe07bbf3317e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +65,8 @@
     "\n",
     "def plot_distil_binary(xD=xD_slider.value, xB=xB_slider.value, R=R_slider.value, VB=VB_slider.value):\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R, boil_up = VB, total_stages = 10, feed_stage = 5)\n",
-    "    distillation_model.plot_distil_binary()\n",
+    "    fig, axs = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "    axs = distillation_model.plot_distil_binary(axs = axs)\n",
     "\n",
     "# Create the interactive widget:\n",
     "interactive_plot = widgets.interactive(plot_distil_binary, xD = xD_slider, xB = xB_slider, R = R_slider, VB = VB_slider)\n",
@@ -105,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
