--- a/src/Example2.ipynb
+++ b/src/Example2.ipynb
@@ -16,29 +16,14 @@
     "from distillation.DistillationModel import DistillationModel\n",
     "from utils.AntoineEquation import AntoineEquation \n",
     "from IPython.display import clear_output\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efa9fa2e90ee41fb9a6fea200efbfba2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
@@ -77,71 +62,11 @@
     "# Display the interactive widget:\n",
     "display(interactive_plot)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "041c1db00ad6473fbea95c9911e79329",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Define the sliders:\n",
-    "xD2_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "VB2_slider = widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Boilup Ratio:', readout_format='.1f')\n",
-    "\n",
-    "def plot_r_vs_fixedpoints(xD=xD2_slider.value, xB=xB2_slider.value, VB=VB2_slider.value):\n",
-    "    clear_output(wait=True)\n",
-    "    display(\"Calculating... Please wait.\")\n",
-    "\n",
-    "    r_values = np.linspace(0.001, 100, 100)\n",
-    "    x_fixed_r_arr = []\n",
-    "    x_fixed_s_arr = []\n",
-    "\n",
-    "    for r in tqdm(r_values, desc=\"Progress\"):\n",
-    "        distillation_model = DistillationModel(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r, boil_up=VB, total_stages=10, feed_stage=5)\n",
-    "        x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\n",
-    "        x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\n",
-    "        x_fixed_r_arr.append(x_fixed_r)\n",
-    "        x_fixed_s_arr.append(x_fixed_s)\n",
-    "\n",
-    "    plt.plot(r_values, x_fixed_r_arr)\n",
-    "    plt.plot(r_values, x_fixed_s_arr)\n",
-    "    plt.xlabel(\"Reflux Ratio\")\n",
-    "    plt.ylabel(\"x\")\n",
-    "\n",
-    "# Create the interactive widget:\n",
-    "interactive_plot = widgets.interactive(plot_r_vs_fixedpoints, xD=xD2_slider, xB=xB2_slider, VB=VB2_slider) \n",
-    "\n",
-    "# Display the interactive widget:\n",
-    "display(interactive_plot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -156,8 +81,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
