--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,21 @@
     "from distillation.DistillationModel import DistillationModel\n",
     "from utils.AntoineEquation import AntoineEquation \n",
     "from IPython.display import clear_output\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "from thermo_models.VLEEmpiricalModel import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efa9fa2e90ee41fb9a6fea200efbfba2",
+       "model_id": "afd209e78076434e9e4a19f915566b81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,25 +43,14 @@
     }
    ],
    "source": [
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
-    "# Antoine Parameters for benzene\n",
-    "Ben_A = 4.72583\n",
-    "Ben_B = 1660.652\n",
-    "Ben_C = -1.461\n",
-    "\n",
-    "# Antoine Parameters for toluene\n",
-    "Tol_A = 4.07827\n",
-    "Tol_B = 1343.943\n",
-    "Tol_C = -53.773\n",
-    "\n",
-    "P_sys = 1.0325\n",
-    "# Create Antoine equations for benzene and toluene\n",
-    "benzene_antoine = AntoineEquation(Ben_A, Ben_B, Ben_C)\n",
-    "toluene_antoine = AntoineEquation(Tol_A, Tol_B, Tol_C)\n",
+    "#Define empirical relationship\n",
+    "def xtoy(x):\n",
+    "    a, b = 9, -0.6\n",
+    "    y = a*x/(1+(a-1)*x) +b*x*(1 - x)\n",
+    "    return y\n",
     "\n",
     "# Create a Raoult's law object\n",
-    "vle_model = RaoultsLawModel(2, P_sys, [benzene_antoine, toluene_antoine])\n",
+    "vle_model = VLEEmpiricalModelBinary(xtoy)\n",
     "# Define the sliders:\n",
     "xD1_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
@@ -80,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38dc6b15443a4a97a9f7812e4d8d3563",
+       "model_id": "158774f1461a48babb83f35a0bd02f1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,18 +131,11 @@
     "# Display the interactive widget:\n",
     "display(interactive_plot)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -165,8 +150,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
