--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afd209e78076434e9e4a19f915566b81",
+       "model_id": "a1aee86d9d3c4bb087d1437a52e71378",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,30 +55,31 @@
     "xD1_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
-    "VB1_slider = widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Boilup Ratio:', readout_format='.1f')\n",
     "\n",
-    "def plot_distil_binary(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value, VB=VB1_slider.value):\n",
-    "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R, boil_up = VB, total_stages = 10, feed_stage = 5)\n",
+    "def plot_distil_binary(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
+    "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
     "    fig, axs = plt.subplots(2, 3, figsize=(15, 5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    axs = distillation_model.plot_distil_binary(axs = axs)\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "\n",
     "# Create the interactive widget:\n",
-    "interactive_plot = widgets.interactive(plot_distil_binary, xD = xD1_slider, xB = xB1_slider, R = R1_slider, VB = VB1_slider)\n",
+    "interactive_plot = widgets.interactive(plot_distil_binary, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
     "\n",
     "# Display the interactive widget:\n",
-    "display(interactive_plot)"
+    "display(interactive_plot)\n",
+    "\n",
+    "# Set the default value to be the minimum reflux ratio\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "158774f1461a48babb83f35a0bd02f1c",
+       "model_id": "9944b08d1c2b431e9d30d0534745b967",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,11 +95,10 @@
     "# Define the sliders:\n",
     "xD2_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "VB2_slider = widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Boilup Ratio:', readout_format='.1f')\n",
     "r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
     "\n",
     "\n",
-    "def plot_r_vs_fixedpoints(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value, VB=VB2_slider.value):\n",
+    "def plot_r_vs_fixedpoints(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
     "    clear_output(wait=True)\n",
     "    display(\"Calculating... Please wait.\")\n",
     "    r_values = np.linspace(0.001, r_max, 100)\n",
@@ -106,7 +106,7 @@
     "    x_fixed_s_arr = []\n",
     "\n",
     "    for r in tqdm(r_values, desc=\"Progress\"):\n",
-    "        distillation_model = DistillationModel(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r, boil_up=VB, total_stages=10, feed_stage=5)\n",
+    "        distillation_model = DistillationModel(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\n",
     "        x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\n",
     "        x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\n",
     "        x_fixed_r_arr.append(x_fixed_r)\n",
@@ -126,7 +126,7 @@
     "\n",
     "\n",
     "# Create the interactive widget:\n",
-    "interactive_plot = widgets.interactive(plot_r_vs_fixedpoints, xD=xD2_slider, xB=xB2_slider, VB=VB2_slider, r_max = r_max_slider) \n",
+    "interactive_plot = widgets.interactive(plot_r_vs_fixedpoints, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
     "\n",
     "# Display the interactive widget:\n",
     "display(interactive_plot)"
