--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%reset -f\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from typing import List, Tuple\n",
@@ -16,18 +17,19 @@
     "from distillation.DistillationModel import DistillationModel\n",
     "from utils.AntoineEquation import AntoineEquation \n",
     "from IPython.display import clear_output\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "027016589f0646fcaa17f4716e136f4f",
+       "model_id": "bfd50ca589bf433f8746091fad3421a8",
        "version_major": 2,
        "version_minor": 0
       },
