added base_e form of antoine equation, corrected the relevant files to account for the change in naming, and added the wilson test for the acetone, ethanol, methanol, system

--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -43,7 +43,7 @@
     "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "\n",
-    "def plot_distil_oplines(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
+    "def plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
     "    fig, axs = plt.subplots(2, 3, figsize=(15, 5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    axs = distillation_model.plot_distil_binary(axs = axs)\n",
@@ -68,7 +68,7 @@
     "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
     "\n",
-    "def plot_r_vs_fixedpoints_example1(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
+    "def plot_r_vs_fixedpoints_ex_1(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
     "    clear_output(wait=True)\n",
     "    display(\"Calculating... Please wait.\")\n",
     "    r_values = np.linspace(0.001, r_max, 100)\n",
@@ -92,7 +92,8 @@
     "    plt.scatter(r_values_s, x_fixed_s_arr, marker ='x')\n",
     "    plt.xlabel(\"Reflux Ratio\")\n",
     "    plt.ylabel(\"x\")\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    "
    ]
   },
   {
@@ -103,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30c473cfcdd74569bf3312302f0e8798",
+       "model_id": "4b16b693d57947c5a3bbc2f638621b17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8841b438ac8b42d9a5641845d41909df",
+       "model_id": "cab573b550e74861b6ee4f135aa64cc1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2806bbf1c911439b87d7f62db875ddf5",
+       "model_id": "3fa89ee913aa4c819bb67e19fc704e2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,7 +172,7 @@
    ],
    "source": [
     "# Create the interactive widget:\n",
-    "interactive_plot = widgets.interactive(plot_distil_oplines, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
+    "interactive_plot = widgets.interactive(plot_distil_oplines_ex1, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
     "\n",
     "# Display the interactive widget:\n",
     "display(interactive_plot)"
@@ -185,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e7b10c1164542aa9e3f78bf056cee10",
+       "model_id": "4a74d4b4c1c148d8853578774be989b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +200,7 @@
    ],
    "source": [
     "# Create the interactive widget:\n",
-    "fixed_points_reflux = widgets.interactive(plot_r_vs_fixedpoints_example1, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
+    "fixed_points_reflux = widgets.interactive(plot_r_vs_fixedpoints_ex_1, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
     "\n",
     "# Display the interactive widget:\n",
     "display(fixed_points_reflux)"
