--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -8,41 +8,15 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from typing import List, Tuple\n",
-    "from scipy.optimize import fsolve\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "from thermo_models.RaoultsLawModel import *\n",
     "from distillation.DistillationModel import DistillationModel\n",
-    "from utils.AntoineEquation import AntoineEquation \n",
     "from IPython.display import clear_output\n",
     "from tqdm import tqdm\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
-    "from thermo_models.VLEEmpiricalModel import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b662b9c48d0e4302bff46836d33e2157",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "from thermo_models.VLEEmpiricalModel import *\n",
     "#Define empirical relationship\n",
     "def xtoy(x):\n",
     "    a, b = 9, -0.6\n",
@@ -56,49 +30,32 @@
     "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "\n",
-    "def plot_distil_binary(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
+    "def plot_distil_oplines_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
     "    fig, axs = plt.subplots(2, 3, figsize=(15, 5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    axs = distillation_model.plot_distil_binary(axs = axs)\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "\n",
-    "# Create the interactive widget:\n",
-    "interactive_plot = widgets.interactive(plot_distil_binary, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
+    "def plot_distil_stripping_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
+    "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
+    "    fig, axs = plt.subplots(2, 1,figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    ax1 = axs[0]; ax1_fixed = axs[1]\n",
+    "    ax1 = distillation_model.plot_distil_strip(ax1 = ax1, ax1_fixed=ax1_fixed)\n",
+    "    plt.subplots_adjust(hspace=0)\n",
+    "    \n",
+    "def plot_distil_rectifying_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
+    "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
+    "    fig, axs = plt.subplots(2, 1,figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    ax2 = axs[0]; ax2_fixed = axs[1]\n",
+    "    ax2 = distillation_model.plot_distil_rect(ax2 = ax2, ax2_fixed=ax2_fixed)\n",
+    "    plt.subplots_adjust(hspace=0)\n",
     "\n",
-    "# Display the interactive widget:\n",
-    "display(interactive_plot)\n",
-    "\n",
-    "# Set the default value to be the minimum reflux ratio\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c46dbe74d2d4b56a18b494c6f50d603",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='R max:', readout_format='.1f', step=1.0), FloatSlide…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
     "# Define the sliders:\n",
     "xD2_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
     "\n",
-    "\n",
-    "def plot_r_vs_fixedpoints(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
+    "def plot_r_vs_fixedpoints_ex2(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
     "    clear_output(wait=True)\n",
     "    display(\"Calculating... Please wait.\")\n",
     "    r_values = np.linspace(0.001, r_max, 100)\n",
@@ -122,14 +79,90 @@
     "    plt.scatter(r_values_s, x_fixed_s_arr, marker ='x')\n",
     "    plt.xlabel(\"Reflux Ratio\")\n",
     "    plt.ylabel(\"x\")\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed7127d68adf4450a743365404f8b07c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "# Create the interactive widget:\n",
-    "interactive_plot = widgets.interactive(plot_r_vs_fixedpoints, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
+    "rect_plot = widgets.interactive(plot_distil_rectifying_ex2, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
+    "\n",
+    "display(rect_plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa0da32f3b3343dc8640ea45b9973ed5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create the interactive widget:\n",
+    "interactive_plot = widgets.interactive(plot_distil_oplines_ex2, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
     "\n",
     "# Display the interactive widget:\n",
     "display(interactive_plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "24168041d3664681b9a81925ce4f6ee1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=1.0, description='R max:', readout_format='.1f', step=1.0), FloatSlide…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create the interactive widget:\n",
+    "fixed_points_reflux = widgets.interactive(plot_r_vs_fixedpoints_ex2, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
+    "\n",
+    "# Display the interactive widget:\n",
+    "display(fixed_points_reflux)"
    ]
   }
  ],
