correct antoine equations

--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -14,7 +14,7 @@
     "from IPython.display import display\n",
     "from thermo_models.RaoultsLawModel import *\n",
     "from distillation.DistillationModel import DistillationModel\n",
-    "from utils.AntoineEquation import AntoineEquation \n",
+    "from utils.AntoineEquation import * \n",
     "from IPython.display import clear_output\n",
     "from tqdm import tqdm\n",
     "import ipywidgets as widgets\n",
@@ -32,8 +32,8 @@
     "\n",
     "P_sys = 1.0325\n",
     "# Create Antoine equations for benzene and toluene\n",
-    "benzene_antoine = AntoineEquation(Ben_A, Ben_B, Ben_C)\n",
-    "toluene_antoine = AntoineEquation(Tol_A, Tol_B, Tol_C)\n",
+    "benzene_antoine = AntoineEquationBase10(Ben_A, Ben_B, Ben_C)\n",
+    "toluene_antoine = AntoineEquationBase10(Tol_A, Tol_B, Tol_C)\n",
     "\n",
     "# Create a Raoult's law object\n",
     "vle_model = RaoultsLawModel(2, P_sys, [benzene_antoine, toluene_antoine])\n",
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b16b693d57947c5a3bbc2f638621b17",
+       "model_id": "7d7b0d80714b4636b7bd6c3270411a76",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cab573b550e74861b6ee4f135aa64cc1",
+       "model_id": "48800d2b8b7a40a0aa4393fb11067828",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fa89ee913aa4c819bb67e19fc704e2c",
+       "model_id": "4467d7f38c21482ea16ab4bc254381fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a74d4b4c1c148d8853578774be989b3",
+       "model_id": "85a035a9b38a4e87ae69cce26ca70396",
        "version_major": 2,
        "version_minor": 0
       },
