--- a/src/Example2.ipynb
+++ b/src/Example2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,9 +53,9 @@
     "\n",
     "P_sys = 1.0325\n",
     "# Create Antoine equations for benzene and toluene\n",
-    "benzene_antoine = AntoineEquation(Ben_A, Ben_B, Ben_C)\n",
-    "toluene_antoine = AntoineEquation(Tol_A, Tol_B, Tol_C)\n",
-    "xylene_antoine = AntoineEquation(Xyl_A, Xyl_B, Xyl_C)\n",
+    "benzene_antoine = AntoineEquationBase10(Ben_A, Ben_B, Ben_C)\n",
+    "toluene_antoine = AntoineEquationBase10(Tol_A, Tol_B, Tol_C)\n",
+    "xylene_antoine = AntoineEquationBase10(Xyl_A, Xyl_B, Xyl_C)\n",
     "\n",
     "# Create a Raoult's law object\n",
     "TolBenXylSys = RaoultsLawModel(3,P_sys,[benzene_antoine, toluene_antoine, xylene_antoine])\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
