Updates to Widget

--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -39,9 +39,10 @@
     "vle_model = RaoultsLawModel(2, P_sys, [benzene_antoine, toluene_antoine])\n",
     "\n",
     "# Define the sliders:\n",
-    "xD1_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
+    "xD1_slider = widgets.FloatSlider(value=0.95, min=0.8, max=1, step=0.001, description='$x_D$:', readout_format='.2f')\n",
+    "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=0.2, step=0.001, description='$x_B$:', readout_format='.2f')\n",
     "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "\n",
     "def plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
@@ -64,9 +65,10 @@
     "    plt.subplots_adjust(hspace=0)\n",
     "\n",
     "# Define the sliders:\n",
-    "xD2_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
+    "xD2_slider = widgets.FloatSlider(value=0.95, min=0.80, max=1, step=0.001, description='$x_D$:', readout_format='.2f')\n",
+    "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max=0.20, step=0.001, description='$x_B$:', readout_format='.2f')\n",
     "r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
+    "\n",
     "\n",
     "def plot_r_vs_fixedpoints_ex_1(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
     "    clear_output(wait=True)\n",
@@ -104,12 +106,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d7b0d80714b4636b7bd6c3270411a76",
+       "model_id": "3f9148bc41974f50bfb6c00c88d28430",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+       "Button(description='Create Model', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b93041bff1524f14bd5252ab7b88b40b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, min=0.8, step=0.001), FloatSlider…"
       ]
      },
      "metadata": {},
@@ -120,7 +136,16 @@
     "# Create the interactive widget:\n",
     "strip_plot = widgets.interactive(plot_distil_stripping_ex1, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
     "\n",
-    "display(strip_plot)"
+    "go_button = widgets.Button(description ='Create Model', width='15%', margin='0 10px 0 0')\n",
+    "    \n",
+    "def on_go_button_click(b):\n",
+    "    strip_plot.update()\n",
+    "\n",
+    "# Attach the function to the button's click event\n",
+    "go_button.on_click(on_go_button_click)\n",
+    "\n",
+    "# Display the interactive plot and the 'Go' button\n",
+    "display(go_button, strip_plot)"
    ]
   },
   {
@@ -131,12 +156,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48800d2b8b7a40a0aa4393fb11067828",
+       "model_id": "7df64f5d873f4b72b8cb930c42b3e8f0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+       "Button(description='Create Model', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58c718437072487b926ddacb31dc7ea7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, min=0.8, step=0.001), FloatSlider…"
       ]
      },
      "metadata": {},
@@ -147,7 +186,16 @@
     "# Create the interactive widget:\n",
     "rect_plot = widgets.interactive(plot_distil_rectifying_ex1, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
     "\n",
-    "display(rect_plot)"
+    "go_button = widgets.Button(description ='Create Model', width='15%', margin='0 10px 0 0')\n",
+    "    \n",
+    "def on_go_button_click(b):\n",
+    "    rect_plot.update()\n",
+    "\n",
+    "# Attach the function to the button's click event\n",
+    "go_button.on_click(on_go_button_click)\n",
+    "\n",
+    "# Display the interactive plot and the 'Go' button\n",
+    "display(go_button, rect_plot)"
    ]
   },
   {
@@ -158,12 +206,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4467d7f38c21482ea16ab4bc254381fb",
+       "model_id": "8442df45b7bb4ceaaeb0867a125f9d8e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+       "Button(description='Create Models', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "01790d006efe443f9417bfb97bebc590",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, min=0.8, step=0.001), FloatSlider…"
       ]
      },
      "metadata": {},
@@ -174,8 +236,16 @@
     "# Create the interactive widget:\n",
     "interactive_plot = widgets.interactive(plot_distil_oplines_ex1, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
     "\n",
-    "# Display the interactive widget:\n",
-    "display(interactive_plot)"
+    "go_button = widgets.Button(description ='Create Models', width='15%', margin='0 10px 0 0')\n",
+    "    \n",
+    "def on_go_button_click(b):\n",
+    "    interactive_plot.update()\n",
+    "\n",
+    "# Attach the function to the button's click event\n",
+    "go_button.on_click(on_go_button_click)\n",
+    "\n",
+    "# Display the interactive plot and the 'Go' button\n",
+    "display(go_button, interactive_plot)"
    ]
   },
   {
@@ -186,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85a035a9b38a4e87ae69cce26ca70396",
+       "model_id": "f159f2ae5f01481d84b5ee1ec0450568",
        "version_major": 2,
        "version_minor": 0
       },
