--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -39,33 +39,33 @@
     "vle_model = RaoultsLawModel(2, P_sys, [benzene_antoine, toluene_antoine])\n",
     "\n",
     "# Define the sliders:\n",
-    "xD1_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
+    "xB1_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
+    "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=0, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "\n",
     "def plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
     "    fig, axs = plt.subplots(2, 3, figsize=(15, 5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    axs = distillation_model.plot_distil_binary(axs = axs)\n",
+    "    distillation_model.plot_distil_strip_binary(axs[0][0], axs[1][0])\n",
+    "    distillation_model.plot_distil_rect_binary(axs[0][1], axs[1][1])\n",
+    "    distillation_model.plot_distil_binary(axs[0][2], axs[1][2])\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "\n",
     "def plot_distil_stripping_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
     "    fig, axs = plt.subplots(2, 1,figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    ax1 = axs[0]; ax1_fixed = axs[1]\n",
-    "    ax1 = distillation_model.plot_distil_strip(ax1 = ax1, ax1_fixed=ax1_fixed)\n",
+    "    distillation_model.plot_distil_strip_binary(ax = axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    \n",
     "def plot_distil_rectifying_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
     "    fig, axs = plt.subplots(2, 1,figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    ax2 = axs[0]; ax2_fixed = axs[1]\n",
-    "    ax2 = distillation_model.plot_distil_rect(ax2 = ax2, ax2_fixed=ax2_fixed)\n",
+    "    distillation_model.plot_distil_rect_binary(ax = axs[0], ax_fixed = axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "\n",
     "# Define the sliders:\n",
-    "xD2_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
+    "xD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
+    "xB2_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
     "\n",
     "def plot_r_vs_fixedpoints_ex_1(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
@@ -104,12 +104,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d7b0d80714b4636b7bd6c3270411a76",
+       "model_id": "02699aaac40c4b508a0f8659a4e14364",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), FloatSli…"
       ]
      },
      "metadata": {},
@@ -131,12 +131,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48800d2b8b7a40a0aa4393fb11067828",
+       "model_id": "c7a8ef54bdbf472087a0e4cbca42a40a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), FloatSli…"
       ]
      },
      "metadata": {},
@@ -158,12 +158,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4467d7f38c21482ea16ab4bc254381fb",
+       "model_id": "fa6132d5e098444684a8193b665a93ed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), FloatSli…"
       ]
      },
      "metadata": {},
@@ -182,28 +182,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85a035a9b38a4e87ae69cce26ca70396",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='R max:', readout_format='.1f', step=1.0), FloatSlide…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the interactive widget:\n",
-    "fixed_points_reflux = widgets.interactive(plot_r_vs_fixedpoints_ex_1, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
+    "# fixed_points_reflux = widgets.interactive(plot_r_vs_fixedpoints_ex_1, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
     "\n",
     "# Display the interactive widget:\n",
-    "display(fixed_points_reflux)"
+    "# display(fixed_points_reflux)"
    ]
   }
  ],
