--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -84,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed7127d68adf4450a743365404f8b07c",
+       "model_id": "07f10dba83f9494bb6eb5b556abbbcc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,12 +117,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa0da32f3b3343dc8640ea45b9973ed5",
+       "model_id": "0a8811448a2b4a3ab293486e0aca49fc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0…"
+       "interactive(children=(FloatSlider(value=1.0, description='$x_D$:', max=1.0, step=0.0001), FloatSlider(value=0.…"
       ]
      },
      "metadata": {},
@@ -145,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24168041d3664681b9a81925ce4f6ee1",
+       "model_id": "b77decb0559540b78f6b921e595268d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,6 +163,16 @@
     "\n",
     "# Display the interactive widget:\n",
     "display(fixed_points_reflux)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.misc import derivative\n",
+    "\n"
    ]
   }
  ],
@@ -182,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
