--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -19,6 +19,10 @@
     "from tqdm import tqdm\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
+    "from ipywidgets import interactive, Button, VBox, HBox, Output\n",
+    "from IPython.display import clear_output\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "# Antoine Parameters for benzene\n",
     "Ben_A = 4.72583\n",
@@ -45,24 +49,35 @@
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "\n",
     "def plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
+    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
     "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
     "    fig, axs = plt.subplots(2, 3, figsize=(15, 5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    distillation_model.plot_distil_strip_binary(axs[0][0], axs[1][0])\n",
     "    distillation_model.plot_distil_rect_binary(axs[0][1], axs[1][1])\n",
     "    distillation_model.plot_distil_binary(axs[0][2], axs[1][2])\n",
     "    plt.subplots_adjust(hspace=0)\n",
+    "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
+    "\n",
     "\n",
     "def plot_distil_stripping_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
-    "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
-    "    fig, axs = plt.subplots(2, 1,figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    distillation_model.plot_distil_strip_binary(ax = axs[0], ax_fixed=axs[1])\n",
+    "    plt.close('all')  # Ensure that any existing figures are closed.\n",
+    "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    distillation_model = DistillationModel(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
+    "    distillation_model.plot_distil_strip_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
-    "    \n",
+    "    plt.show()  # This is essential for the plot to be displayed in the Output widget in Jupyter.\n",
+    "\n",
     "def plot_distil_rectifying_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
-    "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
-    "    fig, axs = plt.subplots(2, 1,figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    distillation_model.plot_distil_rect_binary(ax = axs[0], ax_fixed = axs[1])\n",
+    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
+    "    distillation_model = DistillationModel(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
+    "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    distillation_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
+    "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
+    "\n",
+    "out_strip = Output()\n",
+    "out_rect = Output()\n",
+    "out_oplines = Output()\n",
     "\n",
     "# Define the sliders:\n",
     "xD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
@@ -99,18 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d02e7382ddc47c494abd79f04846a78",
+       "model_id": "ac140a44e1dc44dab8b21545b3972493",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.9259000000000001, description='$x_D$:', max=0.999, min=0.5, …"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), …"
       ]
      },
      "metadata": {},
@@ -118,43 +133,42 @@
     }
    ],
    "source": [
-    "from ipywidgets import interactive, Button, VBox, HBox, Output\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Create an output widget to hold your plots\n",
-    "out = Output()\n",
+    "\n",
     "\n",
     "# Create your interactive widget but don't display it\n",
-    "strip_plot = interactive(plot_distil_stripping_ex1, xD = xD1_slider, xB = xB1_slider, R = R1_slider, continuous_update=False)\n",
+    "strip_plot = interactive(plot_distil_stripping_ex1, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
     "\n",
     "# Define your button click behavior\n",
     "def on_go_button_click(b):\n",
-    "    with out:\n",
-    "        plt.clf()  # Clear the previous plot if any\n",
-    "        strip_plot.update()  # Update the function with current slider values\n",
+    "    with out_strip:\n",
+    "        clear_output(wait=True)\n",
+    "        plt.close('all')  # Close all open matplotlib plots\n",
+    "        plot_distil_stripping_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
     "\n",
     "go_button = Button(description='Create Model')\n",
     "go_button.on_click(on_go_button_click)\n",
     "\n",
-    "# Create a layout and display\n",
-    "layout = VBox([HBox(strip_plot.children[:-1]), go_button, out])\n",
-    "display(layout)\n"
+    "layout = VBox([HBox(strip_plot.children[:-1]), go_button, out_strip])\n",
+    "display(layout)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9557c9d85e874008adfe319266a5f087",
+       "model_id": "95623e30b3cf4a7f90c0fa44ee560ae6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), FloatSli…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), …"
       ]
      },
      "metadata": {},
@@ -162,26 +176,37 @@
     }
    ],
    "source": [
-    "# Create the interactive widget:\n",
-    "rect_plot = widgets.interactive(plot_distil_rectifying_ex1, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
+    "# Create your interactive widget but don't display it\n",
+    "rect_plot = interactive(plot_distil_rectifying_ex1, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
     "\n",
-    "display(rect_plot)"
+    "# Define your button click behavior\n",
+    "def on_rect_button_click(b):\n",
+    "    with out_rect:\n",
+    "        clear_output(wait=True)\n",
+    "        plt.close('all')  # Close all open matplotlib plots\n",
+    "        plot_distil_rectifying_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
+    "\n",
+    "rect_button = Button(description='Generate Plot')\n",
+    "rect_button.on_click(on_rect_button_click)\n",
+    "\n",
+    "layout = VBox([HBox(rect_plot.children[:-1]), rect_button, out_rect])\n",
+    "display(layout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dc0e42f10bc4aeca38d54647fe70a7b",
+       "model_id": "13f6b69446ed495c8d809c4348d43684",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), FloatSli…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), …"
       ]
      },
      "metadata": {},
@@ -189,16 +214,26 @@
     }
    ],
    "source": [
-    "# Create the interactive widget:\n",
-    "interactive_plot = widgets.interactive(plot_distil_oplines_ex1, xD = xD1_slider, xB = xB1_slider, R = R1_slider)\n",
+    "# Create your interactive widget but don't display it\n",
+    "oplines_plot = interactive(plot_distil_oplines_ex1, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
     "\n",
-    "# Display the interactive widget:\n",
-    "display(interactive_plot)"
+    "# Define your button click behavior\n",
+    "def on_oplines_button_click(b):\n",
+    "    with out_oplines:\n",
+    "        clear_output(wait=True)\n",
+    "        plt.close('all')  # Close all open matplotlib plots\n",
+    "        plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
+    "\n",
+    "oplines_button = Button(description='Generate Oplines Plot')\n",
+    "oplines_button.on_click(on_oplines_button_click)\n",
+    "\n",
+    "layout_oplines = VBox([HBox(oplines_plot.children[:-1]), oplines_button, out_oplines])\n",
+    "display(layout_oplines)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
