wrote a trial file to show today for ternary mixtures

--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -14,7 +14,7 @@
     "from IPython.display import display\n",
     "from thermo_models.RaoultsLawModel import *\n",
     "from distillation.DistillationModel import DistillationModel\n",
-    "from distillation.DisillationBinary import DistillationModelBinary\n",
+    "from distillation.DistillationBinary import DistillationModelBinary\n",
     "from utils.AntoineEquation import * \n",
     "from IPython.display import clear_output\n",
     "from tqdm import tqdm\n",
