--- a/src/Example2.ipynb
+++ b/src/Example2.ipynb
@@ -16,12 +16,17 @@
     "from distillation.DistillationModel import DistillationModel\n",
     "from utils.AntoineEquation import * \n",
     "from IPython.display import clear_output\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from distillation.DistillationTernary import *\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "from ipywidgets import interactive, Button, VBox, HBox, Output\n",
+    "from IPython.display import clear_output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,26 +69,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=0, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
+    "out_oplines = Output()\n",
+    "\n",
+    "def plot_rect_strip_ex2(R = R1_slider):\n",
+    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
+    "    xF = np.array([0.3, 0.3, 0.4])\n",
+    "    xD = np.array([0.990, 0.0100, 1e-10])\n",
+    "    xB = np.array([1e-5, 0.4261,0.5749])\n",
+    "    distillation_model = DistillationModelTernary(TolBenXylSys, xF = xF, xD = xD, xB = xB, reflux = R)\n",
+    "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
+    "    distillation_model.plot_rect_strip(ax)\n",
+    "    plt.subplots_adjust(hspace=0)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Underspecification or overspecification: only 2 variables between reflux, boil up, and q can be provided",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m distillation_model \u001b[39m=\u001b[39m DistillationModel(TolBenXylSys, xF \u001b[39m=\u001b[39;49m  np\u001b[39m.\u001b[39;49marray([\u001b[39m0.4\u001b[39;49m,\u001b[39m0.3\u001b[39;49m,\u001b[39m0.3\u001b[39;49m]), xB \u001b[39m=\u001b[39;49m np\u001b[39m.\u001b[39;49marray([\u001b[39m0.8\u001b[39;49m,\u001b[39m0.1\u001b[39;49m,\u001b[39m0.1\u001b[39;49m]), xD\u001b[39m=\u001b[39;49mnp\u001b[39m.\u001b[39;49marray([\u001b[39m0.2\u001b[39;49m,\u001b[39m0.1\u001b[39;49m,\u001b[39m0.7\u001b[39;49m]), reflux \u001b[39m=\u001b[39;49m \u001b[39m2\u001b[39;49m, boil_up\u001b[39m=\u001b[39;49m \u001b[39m2\u001b[39;49m)\n\u001b[1;32m      2\u001b[0m fig, axs \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39msubplots(\u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, figsize\u001b[39m=\u001b[39m(\u001b[39m15\u001b[39m, \u001b[39m5\u001b[39m), gridspec_kw\u001b[39m=\u001b[39m{\u001b[39m'\u001b[39m\u001b[39mheight_ratios\u001b[39m\u001b[39m'\u001b[39m: [\u001b[39m40\u001b[39m, \u001b[39m1\u001b[39m]}, sharex\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mcol\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m distillation_model\u001b[39m.\u001b[39mplot_distil_binary(axs\u001b[39m=\u001b[39maxs)\n",
-      "File \u001b[0;32m~/Library/CloudStorage/OneDrive-JohnsHopkins/ctei_ext_distillation/src/distillation/DistillationModel.py:45\u001b[0m, in \u001b[0;36mDistillationModel.__init__\u001b[0;34m(self, thermo_model, xF, xD, xB, reflux, boil_up, q, feed_stage)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mboil_up \u001b[39m=\u001b[39m ((\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreflux\u001b[39m+\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mq)\u001b[39m*\u001b[39m((\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mxF[\u001b[39m0\u001b[39m]\u001b[39m-\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mxB[\u001b[39m0\u001b[39m])\u001b[39m/\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mxD[\u001b[39m0\u001b[39m]\u001b[39m-\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mxF[\u001b[39m0\u001b[39m]))) \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mq \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     44\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 45\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mUnderspecification or overspecification: only 2 variables between reflux, boil up, and q can be provided\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Underspecification or overspecification: only 2 variables between reflux, boil up, and q can be provided"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e66873794b894b55ac77ae6308aadf93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(FloatLogSlider(value=1.0, description='Reflux Ratio:', max=2.0, readout_format='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "distillation_model = DistillationModel(TolBenXylSys, xF =  np.array([0.4,0.3,0.3]), xB = np.array([0.8,0.1,0.1]), xD=np.array([0.2,0.1,0.7]), reflux = 2, boil_up= 2)\n",
-    "fig, axs = plt.subplots(2, 3, figsize=(15, 5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "distillation_model.plot_distil_binary(axs=axs)"
+    "def on_go_button_click(b):\n",
+    "    with out_oplines:\n",
+    "        clear_output(wait=True)\n",
+    "        plt.close('all')  # Close all open matplotlib plots\n",
+    "        plot_rect_strip_ex2( R=R1_slider.value)\n",
+    "        \n",
+    "go_button = Button(description='Generate Plot')\n",
+    "go_button.on_click(on_go_button_click)\n",
+    "\n",
+    "layout = VBox([HBox([R1_slider, go_button]), out_oplines])\n",
+    "display(layout)"
    ]
   }
  ],
