--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -12,6 +12,7 @@
     "from IPython.display import display\n",
     "from thermo_models.RaoultsLawModel import *\n",
     "from distillation.DistillationModel import DistillationModel\n",
+    "from distillation.DistillationBinary import DistillationModelBinary\n",
     "from IPython.display import clear_output\n",
     "from tqdm import tqdm\n",
     "import ipywidgets as widgets\n",
@@ -32,13 +33,13 @@
     "vle_model = VLEEmpiricalModelBinary(xtoy)\n",
     "\n",
     "# Define the sliders:\n",
-    "xD1_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
+    "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
+    "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=0.5, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "\n",
     "def plot_distil_oplines_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
-    "    distillation_model = DistillationModel(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
+    "    distillation_model = DistillationModelBinary(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
     "    fig, axs = plt.subplots(2, 3, figsize=(15, 5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    distillation_model.plot_distil_strip_binary(axs[0][0], axs[1][0])\n",
     "    distillation_model.plot_distil_rect_binary(axs[0][1], axs[1][1])\n",
@@ -49,14 +50,14 @@
     "def plot_distil_stripping_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed.\n",
     "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    distillation_model = DistillationModel(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
+    "    distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
     "    distillation_model.plot_distil_strip_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()  # This is essential for the plot to be displayed in the Output widget in Jupyter.\n",
     "    \n",
     "def plot_distil_rectifying_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
-    "    distillation_model = DistillationModel(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
+    "    distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
     "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    distillation_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
@@ -67,8 +68,8 @@
     "out_oplines = Output()\n",
     "\n",
     "# Define the sliders:\n",
-    "xD2_slider = widgets.FloatSlider(value=0.95, min=0, max=1, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max=1, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
+    "xD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
+    "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max= 0.5, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
     "\n",
     "def plot_r_vs_fixedpoints_ex2(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
@@ -79,7 +80,7 @@
     "    x_fixed_s_arr = []\n",
     "\n",
     "    for r in tqdm(r_values, desc=\"Progress\"):\n",
-    "        distillation_model = DistillationModel(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\n",
+    "        distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\n",
     "        x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\n",
     "        x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\n",
     "        x_fixed_r_arr.append(x_fixed_r)\n",
@@ -106,12 +107,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e2f1345b8da467a8d9c66aadeb4f969",
+       "model_id": "7379bd66c57d4d70ab55679bcf289515",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), …"
       ]
      },
      "metadata": {},
@@ -138,18 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe22a01bf8e14b959d2c36a417473ad0",
+       "model_id": "f87c163bbfb04ce0afa831c52047a9cb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=1.0, step=0.0001), FloatSlider…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), …"
       ]
      },
      "metadata": {},
@@ -214,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
