--- a/src/Example2.ipynb
+++ b/src/Example2.ipynb
@@ -96,7 +96,7 @@
     "    xB = np.array([1e-5, 0.4261,0.5749])\n",
     "    distillation_model = DistillationModelTernary(TolBenXylSys, xF = xF, xD = xD, xB = xB, reflux = R)\n",
     "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
-    "    distillation_model.plot_rect_strip(ax)\n",
+    "    distillation_model.plot_rect_strip_comp(ax)\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()"
    ]
@@ -109,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4102998afdae497cb288402e2a3d3f93",
+       "model_id": "c22f33e058d3436ea0039a682ed6a5f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,6 +128,52 @@
     "        plt.close('all')  # Close all open matplotlib plots\n",
     "        plot_rect_strip_ex2( R=R1_slider.value)\n",
     "        \n",
+    "go_button = Button(description='Generate Plot')\n",
+    "go_button.on_click(on_go_button_click)\n",
+    "\n",
+    "layout = VBox([HBox([R1_slider, go_button]), out_oplines])\n",
+    "display(layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a656504308df489aab8f24d6282db4be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(FloatLogSlider(value=1.0, description='Reflux Ratio:', max=2.0, readout_format='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "out_residue = Output()\n",
+    "def plot_residue(R = R1_slider):\n",
+    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
+    "    xF = np.array([0.3, 0.3, 0.4])\n",
+    "    xD = np.array([0.990, 0.0100, 1e-10])\n",
+    "    xB = np.array([1e-5, 0.4261,0.5749])\n",
+    "    distillation_model = DistillationModelTernary(TolBenXylSys, xF = xF, xD = xD, xB = xB, reflux = R)\n",
+    "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
+    "    distillation_model.plot_rect_comp(ax)\n",
+    "    plt.subplots_adjust(hspace=0)\n",
+    "    plt.show()\n",
+    "    \n",
+    "def on_go_button_click(a):\n",
+    "    with out_residue:\n",
+    "        clear_output(wait=True)\n",
+    "        plt.close('all')  # Close all open matplotlib plots\n",
+    "        plot_residue( R=R1_slider.value)\n",
+    "    \n",
     "go_button = Button(description='Generate Plot')\n",
     "go_button.on_click(on_go_button_click)\n",
     "\n",
