--- a/src/Example2.ipynb
+++ b/src/Example2.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa406b9e6e4a45deaf37a46f065d182e",
+       "model_id": "60ec9355a3c04948bec2b6c4a7867e83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1766b7d5da534dd9b051ca4a7b9f4e5c",
+       "model_id": "813c581c4978452795e1b8275496f3c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,14 +143,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/panwapromtep/Library/CloudStorage/OneDrive-JohnsHopkins/ctei_ext_distillation/src/distillation/DistillationModel.py:57: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  self.boil_up = ((self.reflux+self.q)*((self.xF[0]-self.xB[0])/(self.xD[0]-self.xF[0]))) + self.q - 1 #this one need 1 component\n"
-     ]
     }
    ],
    "source": [
@@ -191,6 +183,64 @@
     "layout = VBox([HBox([slider1, slider2]), out_residue])\n",
     "display(layout)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xD_slider =  widgets.FloatSlider(value=0.90, min=0.80, max=1.00, step=0.001,  description='xD:', readout_format='.2f')\n",
+    "xF_slider =  widgets.FloatSlider(value=0.50, min=0.20, max=0.80, step=0.001,  description='xF:', readout_format='.2f')\n",
+    "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
+    "out_oplines = Output()\n",
+    "\n",
+    "def plot_rect_strip_ex2(R = 1.5):\n",
+    "    #Obviously gotta change this\n",
+    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
+    "    xF = np.array([0.3, 0.3, 0.4])\n",
+    "    xD = np.array([xD_slider.value, 1-xD_slider.value, 1e-10])\n",
+    "    xB = np.array([1e-5, 0.4261,0.5749])\n",
+    "    distillation_model = DistillationModelTernary(TolBenXylSys, xF = xF, xD = xD, xB = xB, reflux = R)\n",
+    "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
+    "    distillation_model.plot_rect_strip_comp(ax)\n",
+    "    plt.subplots_adjust(hspace=0)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db6b9dc32c3a47f9a1c7d8cbfc5264df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(FloatSlider(value=0.9, description='xF:', max=1.0, min=0.8, step=0.001), FloatSl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def on_go_button_click(b):\n",
+    "    with out_oplines:\n",
+    "        clear_output(wait=True)\n",
+    "        plt.close('all')  # Close all open matplotlib plots\n",
+    "        plot_rect_strip_ex2(R=1.5)\n",
+    "        \n",
+    "go_button = Button(description='Generate Plot')\n",
+    "go_button.on_click(on_go_button_click)\n",
+    "\n",
+    "layout = VBox([HBox([xD_slider, xF_slider, go_button]), out_oplines])\n",
+    "display(layout)"
+   ]
   }
  ],
  "metadata": {
@@ -209,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
